# wicker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Catch2TestMain.cpp  Dockerfile  Doxyfile  LICENSE  README.md  SBOM.md
.github/workflows/: cmake-multi-platform.yml  ubuntu-build.yml
common/: CMakeLists.txt
common/include/: IManager.hpp  Suspendable.hpp  ThreadManagerBase.hpp
common/src/: CMakeLists.txt  Suspendable.cpp  ThreadManagerBase.cpp
common/test/: CMakeLists.txt  Suspendable_ut.cpp  ThreadManagerBase_ut.cpp
demo/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
examples/logging/: CMakeLists.txt
examples/logging/ReferenceCast/: CMakeLists.txt  main.cpp
examples/logging/StreamTargets/: CMakeLists.txt  main.cpp  notes.md
logging/: CMakeLists.txt
logging/include/: IFilter.hpp  ITarget.hpp  LevelFilter.hpp  Logger.hpp  LoggingService.hpp  Record.hpp  StreamTarget.hpp  TargetBase.hpp  utils.hpp
logging/include/filters/: Filterable.hpp  IFilter.hpp  LevelFilter.hpp
logging/include/logging/: Logger.hpp  LoggingService.hpp  utils.hpp
logging/include/logging/filter/: Filterable.hpp  IFilter.hpp  LevelFilter.hpp
logging/src/: CMakeLists.txt  LoggingService.cpp  TargetBase.cpp
logging/src/filter/: Filterable.cpp  LevelFilter.cpp
logging/src/filters/: Filterable.cpp  LevelFilter.cpp
logging/test/: CMakeLists.txt  LoggingService_ut.cpp  TargetBase_ut.cpp
logging/test/filter/: Filterable_ut.cpp  LevelFilter_ut.cpp
logging/test/filters/: Filterable_ut.cpp  LevelFilter_ut.cpp
scripts/: build-all.sh
